# amazon-data-analysis

./: .gitignore  README.md  main.ipynb  pyproject.toml
docs/: presentation.md
reports/: REPORT.md
